--- a/static/base.css
+++ b/static/base.css
@@ -2,6 +2,7 @@
     --c-background: black;
     --c-foreground: white;
     --c-accent: #ff00a8;
+    --c-faded: #2c1b47;
 }
 
 :root {
@@ -51,4 +52,21 @@ body {
 
 .titlebar-button:hover {
     background: var(--c-accent);
+}
+
+[data-playing="true"] {
+    --c-foreground: var(--c-faded);
+    --c-accent: var(--c-faded);
+}
+
+[data-playing="true"] div#app-background {
+    opacity: 0.4;
+    transition: opacity ease-out 5s;
+}
+
+[data-playing="true"] button.media-controls-button,
+[data-playing="true"] input[type="range"],
+[data-playing="true"] input[type="range"]::-webkit-slider-thumb {
+    opacity: 0.8;
+    transition: all ease-out 5s;
 }
